--- a/index.html
+++ b/index.html
@@ -3,12 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Rubik:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Explorer
     </title>
 </head>
 <body>
-    hi!
+    <header class="header">
+        Есть два стула...
+    </header>
+    <main class="main">
+        <div class="cards">
+            <div class="card">
+                <a href="/dogs" class="card__link">
+                    <img src="" alt="" class="card__img">
+                    <p class="card__text">Собаки</p>
+                </a>
+            </div>
+            <div class="card">
+                <a href="#" class="card__link">
+                    <img src="" alt="" class="card__img">
+                    <p class="card__text">Слайдер</p>
+                </a>
+            </div>
+        </div>
+    </main>
 <script src="main.js"></script>
 </body>
 </html>
