--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="cards">
             <div class="card">
                 <a href="/dogs" class="card__link">
-                    <img src="" alt="" class="card__img">
+                    <img src="img/" alt="Собаки" class="card__img">
                     <p class="card__text">Собаки</p>
                 </a>
             </div>
             <div class="card">
                 <a href="#" class="card__link">
-                    <img src="" alt="" class="card__img">
+                    <img src="" alt="Слайдер" class="card__img">
                     <p class="card__text">Слайдер</p>
                 </a>
             </div>
