--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div class="cards">
             <div class="card">
                 <a href="/dogs" class="card__link">
-                    <img src="img/" alt="Собаки" class="card__img">
+                    <div class="card__wrap">
+                        <img src="img/dogs.jpg" alt="Собаки" class="card__img">
+                    </div>
                     <p class="card__text">Собаки</p>
                 </a>
             </div>
