--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Rubik:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main_src/style.css">
     <title>Explorer</title>
 </head>
 <body>
@@ -13,25 +13,28 @@
     </header>
     <main class="main">
         <div class="cards">
+
             <div class="card">
                 <a href="/dogs" class="card__link">
                     <div class="card__wrap">
-                        <img src="img/dogs.png" alt="Собаки" class="card__img">
+                        <img src="main_src/img/dogs.png" alt="Собаки" class="card__img">
                     </div>
                     <p class="card__text">Собаки</p>
                 </a>
             </div>
+
             <div class="card">
                 <a href="/slider" class="card__link">
-                    <img src="img/" alt="Слайдер" class="card__img">
+                    <img src="main_src/img/" alt="Слайдер" class="card__img">
                     <p class="card__text">Слайдер</p>
                 </a>
             </div>
+
         </div>
     </main>
-    <div class="hidden">
-        <h1 class="hidden__text">Родион пидр</h1>
+    <div class="modal">
+        <h1 class="modal__text">Родион пидр</h1>
     </div>
-<script src="main.js"></script>
+<script src="main_src/main.js"></script>
 </body>
 </html>
