--- a/slider/index.html
+++ b/slider/index.html
@@ -7,23 +7,25 @@
     <title>Slider</title>
 </head>
 <body>
-    <main class="content">
-        <ul class="content__list">
-            <li class="content__item">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, veritatis accusantium et, magnam reiciendis eius delectus repudiandae possimus illo optio doloribus ipsam! Minus quasi eligendi libero sapiente repellendus officia quod iusto culpa quis, velit exercitationem ipsum eius, quam aut quas ab ratione blanditiis! Perferendis optio rem voluptatibus voluptate tempora architecto.</p>
-            </li>
-            <li class="content__item">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, veritatis accusantium et, magnam reiciendis eius delectus repudiandae possimus illo optio doloribus ipsam! Minus quasi eligendi libero sapiente repellendus officia quod iusto culpa quis, velit exercitationem ipsum eius, quam aut quas ab ratione blanditiis! Perferendis optio rem voluptatibus voluptate tempora architecto.</p>
-            </li>
-            <li class="content__item">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, veritatis accusantium et, magnam reiciendis eius delectus repudiandae possimus illo optio doloribus ipsam! Minus quasi eligendi libero sapiente repellendus officia quod iusto culpa quis, velit exercitationem ipsum eius, quam aut quas ab ratione blanditiis! Perferendis optio rem voluptatibus voluptate tempora architecto.</p>
-            </li>
-            <li class="content__item">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, veritatis accusantium et, magnam reiciendis eius delectus repudiandae possimus illo optio doloribus ipsam! Minus quasi eligendi libero sapiente repellendus officia quod iusto culpa quis, velit exercitationem ipsum eius, quam aut quas ab ratione blanditiis! Perferendis optio rem voluptatibus voluptate tempora architecto.</p>
-            </li>
-        </ul>
-        <button class="content__prev"><span></span></button>
-        <button class="content__next"><span></span></button>   
+    <main class="main">
+        <div class="content">
+            <ul class="content__list">
+                <li class="content__item">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, veritatis accusantium et, magnam reiciendis eius delectus repudiandae possimus illo optio doloribus ipsam! Minus quasi eligendi libero sapiente repellendus officia quod iusto culpa quis, velit exercitationem ipsum eius, quam aut quas ab ratione blanditiis! Perferendis optio rem voluptatibus voluptate tempora architecto.</p>
+                </li>
+                <li class="content__item">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, veritatis accusantium et, magnam reiciendis eius delectus repudiandae possimus illo optio doloribus ipsam! Minus quasi eligendi libero sapiente repellendus officia quod iusto culpa quis, velit exercitationem ipsum eius, quam aut quas ab ratione blanditiis! Perferendis optio rem voluptatibus voluptate tempora architecto.</p>
+                </li>
+                <li class="content__item">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, veritatis accusantium et, magnam reiciendis eius delectus repudiandae possimus illo optio doloribus ipsam! Minus quasi eligendi libero sapiente repellendus officia quod iusto culpa quis, velit exercitationem ipsum eius, quam aut quas ab ratione blanditiis! Perferendis optio rem voluptatibus voluptate tempora architecto.</p>
+                </li>
+                <li class="content__item">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, veritatis accusantium et, magnam reiciendis eius delectus repudiandae possimus illo optio doloribus ipsam! Minus quasi eligendi libero sapiente repellendus officia quod iusto culpa quis, velit exercitationem ipsum eius, quam aut quas ab ratione blanditiis! Perferendis optio rem voluptatibus voluptate tempora architecto.</p>
+                </li>
+            </ul>
+            <button class="content__prev"><span></span></button>
+            <button class="content__next"><span></span></button>
+        </div>
     </main>
 <script src="src\main.js"></script>
 </body>
