--- a/slider/index.html
+++ b/slider/index.html
@@ -10,7 +10,7 @@
     <main class="content">
         <ul class="content__list">
             <li class="content__item">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, veritatis accusantium et, magnam reiciendis eius delectus repudiandae possimus illo optio doloribus ipsam! Minus quasi eligendi libero sapiente repellendus officia quod iusto culpa quis, velit exercitationem ipsum eius, quam aut quas ab ratione blanditiis! Perferendis optio rem voluptatibus voluptate tempora architecto.</p>
+                <p>Свайп влево</p>
             </li>
             <li class="content__item">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, veritatis accusantium et, magnam reiciendis eius delectus repudiandae possimus illo optio doloribus ipsam! Minus quasi eligendi libero sapiente repellendus officia quod iusto culpa quis, velit exercitationem ipsum eius, quam aut quas ab ratione blanditiis! Perferendis optio rem voluptatibus voluptate tempora architecto.</p>
