--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="card">
                 <a href="/slider" class="card__link">
-                    <img src="main_src/img/" alt="Слайдер" class="card__img">
+                    <img src="main_src/img/slider.png" alt="Слайдер" class="card__img">
                     <p class="card__text">Слайдер</p>
                 </a>
             </div>
