--- a/Lottery/index.html
+++ b/Lottery/index.html
@@ -30,6 +30,52 @@
                 </div>
             </div>
         </header>
+        <div class="slider-content">
+            <div class="row">
+                <div class="col-md-11">
+                    <div class="slider">
+                        <div class="slide">
+                            <div class="col-md-5">
+                                <h1 class="slider__title big-title">Внедрите новые конверсионные элементы</h1>
+                                <p class="slider__text orange-text">Увеличьте количество заявок на сайте в 3 раза!</p>
+                                <p class="slider__text">Геймификация – новый инструмент привлечения лидов по низкой стоимости за счет повышения вовлеченности!</p>
+                                <p class="slider__text orange-text">Внедри сейчас и получай заявки уже через 10 минут!</p>
+                                <input type="button" class="button" value="Внедрить бесплатно">
+                                <input type="button" class="play" id="play">
+                                <label for="play" class="slider__text">Смотреть видео</label>
+                            </div>
+                        </div>
+                        <div class="slide" style="display: none;">
+                            <div class="col-md-5">
+                                <h1 class="slider__title big-title">Внедрите новые конверсионные элементы</h1>
+                                <p class="slider__text orange-text">Увеличьте количество заявок на сайте в 3 раза!</p>
+                                <p class="slider__text">Геймификация – новый инструмент привлечения лидов по низкой стоимости за счет повышения вовлеченности!</p>
+                                <p class="slider__text orange-text">Внедри сейчас и получай заявки уже через 10 минут!</p>
+                                <input type="button" class="button" value="Внедрить бесплатно">
+                                <input type="button" class="play" id="play">
+                                <label for="play" class="slider__text">Смотреть видео</label>
+                            </div>
+                        </div>
+                        <div class="slide" style="display: none;">
+                            <div class="col-md-5">
+                                <h1 class="slider__title big-title">Внедрите новые конверсионные элементы</h1>
+                                <p class="slider__text orange-text">Увеличьте количество заявок на сайте в 3 раза!</p>
+                                <p class="slider__text">Геймификация – новый инструмент привлечения лидов по низкой стоимости за счет повышения вовлеченности!</p>
+                                <p class="slider__text orange-text">Внедри сейчас и получай заявки уже через 10 минут!</p>
+                                <input type="button" class="button" value="Внедрить бесплатно">
+                                <input type="button" class="play" id="play">
+                                <label for="play" class="slider__text">Смотреть видео</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <input type="radio" name="sliderPage" checked>
+            <input type="radio" name="sliderPage">
+            <input type="radio" name="sliderPage">
+            <input type="button" class="button slider-btn" value="Следующий виджет">
+        </div>
     </div>
 </section>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
