dealing with lottery

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 </a>
             </div>
 
+            <div class="card">
+                <a href="/Lottery" class="card__link">
+                    <img src="main_src/img/lottery.png" alt="Lottery" class="card__img">
+                    <p class="card__text">Лотерея</p>
+                </a>
+            </div>
         </div>
     </main>
     <div class="modal">
