--- a/Lottery/index.html
+++ b/Lottery/index.html
@@ -291,21 +291,27 @@
             </div>
             <div class="col-md-7">
                 <div class="portfolio__slider">
-                    <div class="portfolio__slide"></div>
-                    <div class="portfolio__slide"></div>
-                    <div class="portfolio__slide"></div>
+                    <div class="portfolio__wrapper">
+                        <div class="portfolio__slide"><img src="/src/img/portfolio__img.png" alt="" class="portfolio__img"></div>
+                        <div class="portfolio__slide"><img src="/src/img/portfolio__img.png" alt="" class="portfolio__img"></div>
+                        <div class="portfolio__slide"><img src="/src/img/portfolio__img.png" alt="" class="portfolio__img"></div>
+                        <button class="portfolio__prev"></button>
+                        <button class="portfolio__next"></button>
+                    </div>
 
-                    <button class="portfolio__prev"></button>
-                    <button class="portfolio__next"></button>
+                    
                     <div class="portfolio__radios">
-                        <input type="radio" class="portfolio__radio">
-                        <input type="radio" class="portfolio__radio">
-                        <input type="radio" class="portfolio__radio">
+                        <input type="radio" class="portfolio__radio" name="portfolio__radio" checked>
+                        <input type="radio" class="portfolio__radio" name="portfolio__radio">
+                        <input type="radio" class="portfolio__radio" name="portfolio__radio">
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</section>
+<section class="price">
+    
 </section>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
