done (no adaptive)

--- a/Lottery/index.html
+++ b/Lottery/index.html
@@ -502,9 +502,23 @@
 </section>
 <footer class="footer">
     <div class="container">
-        <div class="row">
+        <div class="row justify-content-between align-items-center">
             <div class="col-md-4">
-                
+                <img src="/src/img/logo2.png" class="footer__img" alt="">
+            </div>
+            <div class="col-md-2">
+                <ul class="footer__link-list">
+                    <li class="footer__link"><a href="#" target="_blank">Lorem, ipsum dolor.</a></li>
+                    <li class="footer__link"><a href="#" target="_blank">Lorem, ipsum dolor.</a></li>
+                    <li class="footer__link"><a href="#" target="_blank">Lorem, ipsum dolor.</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <ul class="footer__link-list">
+                    <li class="footer__link"><a href="tel:+79944261980" target="_blank">+79944261980</a></li>
+                    <li class="footer__link"><a href="mailto:sercom92@gmail.com" target="_blank">sercom92@gmail.com</a></li>
+                    <li class="footer__link"><a href="https://vk.com/easy_fresh" target="_blank">Social</a></li>
+                </ul>
             </div>
         </div>
     </div>
