--- a/Lottery/index.html
+++ b/Lottery/index.html
@@ -13,10 +13,15 @@
     <div class="container">
         <header class="header">
             <div class="row">
-                <div class="col-md-12">
-                    <div class="header__content">
+                <div class="header__content">
+                    <div class="col-md-2">
                         <img src="/src/img/Logo.png" alt="header__logo" class="header__logo">
+                    </div>
+                    <div class="col-md-8">
                         <nav class="nav">
+                            <div class="header__burger">
+                                <span></span>
+                            </div>
                             <ul class="header__nav">
                                 <li class="header__nav__item"><a href="#" class="header__link">Как это работает</a></li>
                                 <li class="header__nav__item"><a href="#" class="header__link">Почему мы</a></li>
@@ -25,6 +30,8 @@
                                 <li class="header__nav__item"><a href="#" class="header__link">Отзывы</a></li>
                             </ul>
                         </nav>
+                    </div>
+                    <div class="col-md-2">
                         <input type="button" class="button login" value="Войти">
                     </div>
                 </div>
