--- a/Lottery/index.html
+++ b/Lottery/index.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="header__content">
                     <div class="col-md-2">
-                        <img src="/src/img/Logo.png" alt="header__logo" class="header__logo">
+                        <img src="src/img/Logo.png" alt="header__logo" class="header__logo">
                     </div>
                     <div class="col-md-8">
                         <nav class="nav">
@@ -54,7 +54,7 @@
                                     </div>
                                     <div class="col-md-5">
                                         <div class="slide__img__wrap">
-                                            <img src="/src/img/imac.png" alt="slide__img" class="slide__img">
+                                            <img src="src/img/imac.png" alt="slide__img" class="slide__img">
                                         </div>
                                     </div>
                                 </div>
@@ -222,37 +222,37 @@
                 <div class="partners">
                     <div class="partners__logos">
                         <div class="partners__img-wrap">
-                            <img src="/src/img/partner1.png" alt="" class="partner__logo">
+                            <img src="src/img/partner1.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="/src/img/partner2.png" alt="" class="partner__logo">
+                            <img src="src/img/partner2.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="/src/img/partner1.png" alt="" class="partner__logo">
+                            <img src="src/img/partner1.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="/src/img/partner3.png" alt="" class="partner__logo">
+                            <img src="src/img/partner3.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="/src/img/partner1.png" alt="" class="partner__logo">
+                            <img src="src/img/partner1.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="/src/img/partner2.png" alt="" class="partner__logo">
+                            <img src="src/img/partner2.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="/src/img/partner1.png" alt="" class="partner__logo">
+                            <img src="src/img/partner1.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="/src/img/partner3.png" alt="" class="partner__logo">
+                            <img src="src/img/partner3.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="/src/img/partner2.png" alt="" class="partner__logo">
+                            <img src="src/img/partner2.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="/src/img/partner2.png" alt="" class="partner__logo">
+                            <img src="src/img/partner2.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="/src/img/partner1.png" alt="" class="partner__logo">
+                            <img src="src/img/partner1.png" alt="" class="partner__logo">
                         </div>
                     </div>
                     <div class="partner__radios">
@@ -303,26 +303,26 @@
             <div class="col-md-7">
                 <div class="advantages__grid">
                     <div class="advantages__item">
-                        <h3 class="advantages__title">Прозрачность<img src="/src/img/1of4.png" alt="" class="advantages__diag"></h3>
+                        <h3 class="advantages__title">Прозрачность<img src="src/img/1of4.png" alt="" class="advantages__diag"></h3>
                         <p class="advantages__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident nemo quaerat quas repellendus voluptates neque cupiditate enim cum porro veniam, doloremque, distinctio et minima sunt culpa aut beatae esse a?</p>
                     </div>
                     <div class="advantages__item">
-                        <h3 class="advantages__title">Гибкость<img src="/src/img/2of4.png" alt="" class="advantages__diag"></h3>
+                        <h3 class="advantages__title">Гибкость<img src="src/img/2of4.png" alt="" class="advantages__diag"></h3>
                         <p class="advantages__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident nemo quaerat quas repellendus voluptates neque cupiditate enim cum porro veniam, doloremque, distinctio et minima sunt culpa aut beatae esse a?</p>
                     </div>
                     <div class="advantages__item">
-                        <h3 class="advantages__title">Лёгкость<img src="/src/img/3of4.png" alt="" class="advantages__diag"></h3>
+                        <h3 class="advantages__title">Лёгкость<img src="src/img/3of4.png" alt="" class="advantages__diag"></h3>
                         <p class="advantages__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident nemo quaerat quas repellendus voluptates neque cupiditate enim cum porro veniam, doloremque, distinctio et minima sunt culpa aut beatae esse a?</p>
                     </div>
                     <div class="advantages__item">
-                        <h3 class="advantages__title">Надёжность<img src="/src/img/4of4.png" alt="" class="advantages__diag"></h3>
+                        <h3 class="advantages__title">Надёжность<img src="src/img/4of4.png" alt="" class="advantages__diag"></h3>
                         <p class="advantages__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident nemo quaerat quas repellendus voluptates neque cupiditate enim cum porro veniam, doloremque, distinctio et minima sunt culpa aut beatae esse a?</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="advantages__phone">
-                    <img src="/src/img/iphone.png" alt="iphone">
+                    <img src="src/img/iphone.png" alt="iphone">
                 </div>
             </div>
         </div>
@@ -353,9 +353,9 @@
             <div class="col-md-7">
                 <div class="portfolio__slider">
                     <div class="portfolio__wrapper">
-                        <div class="portfolio__slide"><img src="/src/img/portfolio__img.png" alt="" class="portfolio__img"></div>
-                        <div class="portfolio__slide"><img src="/src/img/portfolio__img.png" alt="" class="portfolio__img"></div>
-                        <div class="portfolio__slide"><img src="/src/img/portfolio__img.png" alt="" class="portfolio__img"></div>
+                        <div class="portfolio__slide"><img src="src/img/portfolio__img.png" alt="" class="portfolio__img"></div>
+                        <div class="portfolio__slide"><img src="src/img/portfolio__img.png" alt="" class="portfolio__img"></div>
+                        <div class="portfolio__slide"><img src="src/img/portfolio__img.png" alt="" class="portfolio__img"></div>
                         <button class="portfolio__prev"></button>
                         <button class="portfolio__next"></button>
                     </div>
@@ -481,7 +481,7 @@
                     <div class="coments__slide">
                         <div class="row">
                             <div class="col-md-3">
-                                <img src="/src/img/Edalo.png" alt="Edalo" class="coments__photo">
+                                <img src="src/img/Edalo.png" alt="Edalo" class="coments__photo">
                             </div>
                             <div class="col-md-6">
                                 <div class="coments__item">
@@ -494,7 +494,7 @@
                     <div class="coments__slide">
                         <div class="row">
                             <div class="col-md-3">
-                                <img src="/src/img/Edalo.png" alt="Edalo" class="coments__photo">
+                                <img src="src/img/Edalo.png" alt="Edalo" class="coments__photo">
                             </div>
                             <div class="col-md-6">
                                 <div class="coments__item">
@@ -507,7 +507,7 @@
                     <div class="coments__slide">
                         <div class="row">
                             <div class="col-md-3">
-                                <img src="/src/img/Edalo.png" alt="Edalo" class="coments__photo">
+                                <img src="src/img/Edalo.png" alt="Edalo" class="coments__photo">
                             </div>
                             <div class="col-md-6">
                                 <div class="coments__item">
@@ -574,7 +574,7 @@
     <div class="container">
         <div class="row justify-content-between align-items-center">
             <div class="col-md-4">
-                <img src="/src/img/logo2.png" class="footer__img" alt="">
+                <img src="src/img/logo2.png" class="footer__img" alt="">
             </div>
             <div class="col-md-2">
                 <ul class="footer__link-list">
