--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="cards">
 
             <div class="card">
-                <a href="/dogs" class="card__link">
+                <a href="dogs/index.html" class="card__link">
                     <div class="card__wrap">
                         <img src="main_src/img/dogs.png" alt="Собаки" class="card__img">
                     </div>
@@ -25,16 +25,23 @@
             </div>
 
             <div class="card">
-                <a href="/slider" class="card__link">
+                <a href="slider/index.html" class="card__link">
                     <img src="main_src/img/slider.png" alt="Слайдер" class="card__img">
                     <p class="card__text">Слайдер</p>
                 </a>
             </div>
 
             <div class="card">
-                <a href="/Lottery" class="card__link">
+                <a href="Lottery/index.html" class="card__link">
                     <img src="main_src/img/lottery.png" alt="Lottery" class="card__img">
                     <p class="card__text">Лотерея</p>
+                </a>
+            </div>
+
+            <div class="card">
+                <a href="slick/index.html" class="card__link">
+                    <img src="main_src/img/slick-slider.png" alt="slick-slider" class="card__img">
+                    <p class="card__text">Slick - Slider</p>
                 </a>
             </div>
         </div>
